<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_Mqtt" Id="{24274f08-1d80-488c-a0d7-2f098a3e80c3}" SpecialFunc="None">
    <Declaration><![CDATA[{attribute 'c++_compatible'}
FUNCTION_BLOCK PUBLIC FB_Mqtt EXTENDS FB_IotMqttClient
VAR
    (* received message *)
    {attribute 'TcEncoding':='UTF-8'}
    sTopicRcv   : STRING(255);
    {attribute 'TcEncoding':='UTF-8'}
    sPayloadRcv : STRING(255);
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="OnMqttMessage" Id="{0669bece-9ec6-40f6-ac97-c86ec1574824}">
      <Declaration><![CDATA[{attribute 'c++_compatible'}
{attribute 'pack_mode' := '4'}
{attribute 'show'}
{attribute 'minimal_input_size' := '4'}
METHOD OnMqttMessage : HRESULT
VAR_IN_OUT CONSTANT
    topic    : STRING;
END_VAR
VAR_INPUT
    payload  : PVOID;
    length   : UDINT;
    qos      : TcIotMqttQos;
    repeated : BOOL;
END_VAR
VAR
    nPayloadRcvLen : UDINT;
	fbJsonDataType : FB_JsonReadWriteDataType;
	fbreseterrors:reset_errors;
	fbenadisloco:enable_disable_driver;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
STRNCPY( ADR(sTopicRcv), ADR(topic), SIZEOF(sTopicRcv) );
nPayloadRcvLen := MIN(length, DINT_TO_UDINT(SIZEOF(sPayloadRcv))-1);
MEMCPY( ADR(sPayloadRcv), payload, nPayloadRcvLen );
sPayloadRcv[nPayloadRcvLen] := 0;  // ensure a null termination of received string
IF(topic=MQTT_COMMAND_TOPIC AND fbJsonDataType.SetSymbolFromJson(sPayloadRcv, 'ST_COMMAND', SIZEOF(st_command), ADR(st_command)))THEN
	robotdata.activecommand:=st_command.command;
	CASE st_command.command OF
	COMMAND_STOP:
		robotdata.motorCword[0]:=43;
		robotdata.motorCword[1]:=43;
	COMMAND_LOCOMOTION_DISABLE:
		fbenadisloco(DRIVER:=0,CWORD:=6);
	COMMAND_LOCOMOTION_ENABLE:
		fbenadisloco(DRIVER:=0,CWORD:=47);
	COMMAND_LIFTER_DISABLE:
		fbenadisloco(DRIVER:=1,CWORD:=6);
	COMMAND_LIFTER_ENABLE:
		fbenadisloco(DRIVER:=1,CWORD:=47);
	COMMAND_ROTATOR_DISABLE:
		fbenadisloco(DRIVER:=2,CWORD:=6);
	COMMAND_ROTATOR_ENABLE:
		fbenadisloco(DRIVER:=2,CWORD:=47);
	COMMAND_PF_ENADIS:
		robotdata.pfEnableContactor:=NOT robotdata.pfEnableContactor;
	COMMAND_DRIVER_ENADIS:
		robotdata.driverContactor:=NOT robotdata.driverContactor;
	STARTSTOP_CHARGE:
		robotdata.chargerContactor:=NOT robotdata.chargerContactor;
	COMMAND_CANCEL_COMMAND:
		cancelcommand:=true;
	COMMAND_RESET_ERRORS:
		fbreseterrors();
	COMMAND_TOGGLE_CONT:
		robotdata.controller:=ABS(robotdata.controller-1);
		st_command.command:=0;
		robotdata.activeState:=CONT_TOGGLE_ENDED;
	COMMAND_SET_MOTIONLIMITS:
		ACCELERATION_LIMIT:=st_command.acc;
		JERK_LIMIT:=st_command.jerk;
		SPEED_LIMIT:=st_command.spd;
	END_CASE
	
CASE st_command.command OF
	3:
    	forwardCommand:=st_command.distance;
    	userCommand:=4;
	10:
    	IF(st_command.direction=0) THEN userCommand:=1;
    	ELSIF(st_command.direction=1)then userCommand:=2;
		END_IF
		
END_CASE
ELSIF topic='STOPPER' then
	robotdata.motorCword[0]:=43;
	robotdata.motorCword[1]:=43;
END_IF
OnMqttMessage := S_OK;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_Mqtt">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_Mqtt.OnMqttMessage">
      <LineId Id="19" Count="5" />
      <LineId Id="213" Count="0" />
      <LineId Id="233" Count="0" />
      <LineId Id="290" Count="2" />
      <LineId Id="30" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="53" Count="1" />
      <LineId Id="144" Count="3" />
      <LineId Id="149" Count="2" />
      <LineId Id="148" Count="0" />
      <LineId Id="140" Count="3" />
      <LineId Id="171" Count="1" />
      <LineId Id="192" Count="1" />
      <LineId Id="73" Count="1" />
      <LineId Id="95" Count="0" />
      <LineId Id="97" Count="1" />
      <LineId Id="118" Count="0" />
      <LineId Id="267" Count="3" />
      <LineId Id="94" Count="0" />
      <LineId Id="266" Count="0" />
      <LineId Id="237" Count="0" />
      <LineId Id="240" Count="1" />
      <LineId Id="238" Count="0" />
      <LineId Id="243" Count="1" />
      <LineId Id="242" Count="0" />
      <LineId Id="245" Count="1" />
      <LineId Id="239" Count="0" />
      <LineId Id="312" Count="2" />
      <LineId Id="236" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>